--- a/src/components/aboutme.css
+++ b/src/components/aboutme.css
@@ -1,12 +1,26 @@
-.name-text p {
+.moa-text{
 	text-transform: uppercase;
+	font-size: 45px;
 	font-family: 'Satisfy', cursive, sans-serif;
 }
 
 
-.intro-text{
+.hello-text{
 	color: black;
 	text-transform: uppercase;
 	font-size: 50px;
 	font-weight: bold;
+}
+
+.about-text{
+	color: black;
+	text-transform: uppercase;
+	font-size: 16px;
+	font-family: 'Satisfy', cursive, sans-serif;
+	width: 450px;
+}
+
+.about-me {
+width: 500px;
+background-color: pink;
 }
