--- a/src/components/aboutme.css
+++ b/src/components/aboutme.css
@@ -1,26 +1,35 @@
 .moa-text{
-	text-transform: uppercase;
-	font-size: 45px;
+	font-size: 30px;
 	font-family: 'Satisfy', cursive, sans-serif;
 }
-
 
 .hello-text{
 	color: black;
 	text-transform: uppercase;
 	font-size: 50px;
 	font-weight: bold;
+	width: 340px;
 }
 
 .about-text{
 	color: black;
-	text-transform: uppercase;
-	font-size: 16px;
+	font-size: 15px;
 	font-family: 'Satisfy', cursive, sans-serif;
 	width: 450px;
 }
 
 .about-me {
-width: 500px;
 background-color: pink;
+}
+
+.profil-img {
+	margin-left: 500px;
+}
+
+.about-me{
+  font-family: 'Satisfy', cursive, sans-serif;
+	color: #065143;
+	background-color: white;
+	font-size: 100px;
+
 }
