--- a/src/components/aboutme.css
+++ b/src/components/aboutme.css
@@ -1,35 +1,68 @@
 .moa-text{
+	position: absolute;
 	font-size: 30px;
 	font-family: 'Satisfy', cursive, sans-serif;
+	margin-left: 300px;
+	margin: 200px;
+}
+.intro-text{
+	text-transform: uppercase;
+	font-size: 60px;
+	font-family: sans-serif;
+	font-weight: bold;
 }
 
-.hello-text{
-	color: black;
-	text-transform: uppercase;
-	font-size: 50px;
-	font-weight: bold;
-	width: 340px;
+.div-textes{
+	position: absolute;
+	font-family: sans-serif;
+	margin-left: 300px;
+	margin: 235px;
+	width: 330px;
+}
+
+.hello-textes .about-text {
+	font-weight: lighter;
 }
 
 .about-text{
-	color: black;
-	font-size: 15px;
+	position: absolute;
+	font-size: 20px;
+	font-family: sans-serif;
+	font-weight: lighter;
+	width: 500px;
 	font-family: 'Satisfy', cursive, sans-serif;
-	width: 450px;
-}
 
-.about-me {
-background-color: pink;
 }
 
 .profil-img {
-	margin-left: 500px;
+	margin-left: 600px;
+	width: 600px;
+	height: 600px;
+	margin-top: 100px;
+
 }
 
 .about-me{
-  font-family: 'Satisfy', cursive, sans-serif;
-	color: #065143;
-	background-color: white;
+	font-family: 'Satisfy', cursive, sans-serif;
+	color: black;
+	bottom: 0;
+	left: 0;
+	top: 0px;
+	right: 0;
+	align-items: center;
+	justify-content: center;
+	position: absolute;
+	font-size: 80px;
+	margin: 25px;
+}
+.all-info {
+	bottom: 0;
+	left: 0;
+	top: 0px;
+	right: 0;
+	align-items: center;
+	justify-content: center;
+	position: absolute;
 	font-size: 100px;
 
 }
