--- a/src/components/portfolio.css
+++ b/src/components/portfolio.css
@@ -1,5 +1,13 @@
 .portfolio-header {
   font-family: 'Satisfy', cursive, sans-serif;
   color: #065143;
+  bottom: 0;
+  left: 0;
+  top: 0px;
+  right: 0;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
   font-size: 100px;
+  margin: 25px;
 }
