--- a/src/components/aboutme.css
+++ b/src/components/aboutme.css
@@ -1,18 +1,34 @@
-.moa-text{
+/* main header for all pages  */
+.about-header {
+  font-family: 'Satisfy', cursive, sans-serif;
+  color: black;
+  bottom: 0;
+  left: 0;
+  top: 0px;
+  right: 0;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  font-size: 100px;
+  margin: 25px;
+}
+
+.mini-text{
 	position: absolute;
 	font-size: 30px;
 	font-family: 'Satisfy', cursive, sans-serif;
 	margin-left: 300px;
 	margin: 200px;
 }
-.intro-text{
+
+.intro-text {
 	text-transform: uppercase;
 	font-size: 60px;
 	font-family: sans-serif;
 	font-weight: bold;
 }
 
-.div-textes{
+.div-textes {
 	position: absolute;
 	font-family: sans-serif;
 	margin-left: 300px;
