--- a/src/components/contact.css
+++ b/src/components/contact.css
@@ -1,11 +1,34 @@
-.intro-text{
+/* main header for all pages  */
+.contact-header {
+  font-family: 'Satisfy', cursive, sans-serif;
+  color: black;
+  bottom: 0;
+  left: 0;
+  top: 0px;
+  right: 0;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  font-size: 100px;
+  margin: 25px;
+}
+
+.mini-text{
+	position: absolute;
+	font-size: 30px;
+	font-family: 'Satisfy', cursive, sans-serif;
+	margin-left: 300px;
+	margin: 200px;
+}
+
+.intro-text {
 	text-transform: uppercase;
 	font-size: 60px;
 	font-family: sans-serif;
 	font-weight: bold;
 }
 
-.div-textes{
+.div-textes {
 	position: absolute;
 	font-family: sans-serif;
 	margin-left: 300px;
@@ -13,16 +36,29 @@
 	width: 330px;
 }
 
-.page-text{
+.hello-textes .about-text {
+	font-weight: lighter;
+}
+
+.about-text{
 	position: absolute;
 	font-size: 20px;
 	font-family: sans-serif;
 	font-weight: lighter;
 	width: 500px;
 	font-family: 'Satisfy', cursive, sans-serif;
+
 }
 
-.contact-me{
+.profil-img {
+	margin-left: 600px;
+	width: 600px;
+	height: 600px;
+	margin-top: 100px;
+
+}
+
+.about-me{
 	font-family: 'Satisfy', cursive, sans-serif;
 	color: black;
 	bottom: 0;
@@ -44,7 +80,5 @@
 	justify-content: center;
 	position: absolute;
 	font-size: 100px;
-}
-.contactme-img{
 
 }
