--- a/src/components/contact.css
+++ b/src/components/contact.css
@@ -1,84 +1,23 @@
-/* main header for all pages  */
-.contact-header {
-  font-family: 'Satisfy', cursive, sans-serif;
-  color: black;
-  bottom: 0;
-  left: 0;
-  top: 0px;
-  right: 0;
-  align-items: center;
-  justify-content: center;
-  position: absolute;
-  font-size: 100px;
-  margin: 25px;
-}
-
-.mini-text{
-	position: absolute;
-	font-size: 30px;
-	font-family: 'Satisfy', cursive, sans-serif;
-	margin-left: 300px;
-	margin: 200px;
-}
-
-.intro-text {
+.contactme-text {
 	text-transform: uppercase;
-	font-size: 60px;
+	font-size: 40px;
 	font-family: sans-serif;
 	font-weight: bold;
-}
-
-.div-textes {
-	position: absolute;
-	font-family: sans-serif;
-	margin-left: 300px;
-	margin: 235px;
-	width: 330px;
-}
-
-.hello-textes .about-text {
-	font-weight: lighter;
-}
-
-.about-text{
-	position: absolute;
-	font-size: 20px;
-	font-family: sans-serif;
-	font-weight: lighter;
-	width: 500px;
-	font-family: 'Satisfy', cursive, sans-serif;
-
-}
-
-.profil-img {
-	margin-left: 600px;
-	width: 600px;
-	height: 600px;
-	margin-top: 100px;
-
-}
-
-.about-me{
-	font-family: 'Satisfy', cursive, sans-serif;
 	color: black;
-	bottom: 0;
-	left: 0;
-	top: 0px;
-	right: 0;
-	align-items: center;
-	justify-content: center;
+	width: 600px;
 	position: absolute;
-	font-size: 80px;
-	margin: 25px;
+	font-family: sans-serif;
 }
-.all-info {
-	bottom: 0;
-	left: 0;
-	top: 0px;
-	right: 0;
-	align-items: center;
-	justify-content: center;
-	position: absolute;
-	font-size: 100px;
 
+address {
+	font-size: 20px;
+		font-family: 'Satisfy', cursive, sans-serif;
+		color: black;
+}
+
+address a {
+	color: white;
+	background: black;
+padding: 6px;
+margin: 4px;
 }
