--- a/src/components/aboutme.css
+++ b/src/components/aboutme.css
@@ -1,18 +1,3 @@
-/* main header for all pages  */
-.about-header {
-  font-family: 'Satisfy', cursive, sans-serif;
-  color: black;
-  bottom: 0;
-  left: 0;
-  top: 0px;
-  right: 0;
-  align-items: center;
-  justify-content: center;
-  position: absolute;
-  font-size: 100px;
-  margin: 25px;
-}
-
 .mini-text{
 	font-size: 30px;
 	font-family: 'Satisfy', cursive, sans-serif;
@@ -25,14 +10,6 @@
 	font-weight: bold;
 }
 
-.div-textes {
-	position: absolute;
-	font-family: sans-serif;
-	margin-left: 300px;
-	margin: 235px;
-	width: 330px;
-}
-
 .hello-textes .about-text {
 	font-weight: lighter;
 }
@@ -42,17 +19,15 @@
 	font-size: 20px;
 	font-family: sans-serif;
 	font-weight: lighter;
-	width: 500px;
+	width: 450px;
 	font-family: 'Satisfy', cursive, sans-serif;
-
 }
 
 .profil-img {
 	margin-left: 600px;
 	width: 600px;
 	height: 600px;
-	margin-top: 100px;
-
+	margin-top: 70px;
 }
 
 .about-me{
@@ -68,6 +43,7 @@
 	font-size: 80px;
 	margin: 25px;
 }
+
 .all-info {
 	bottom: 0;
 	left: 0;
@@ -77,5 +53,13 @@
 	justify-content: center;
 	position: absolute;
 	font-size: 100px;
+}
 
+i{
+font-size: 20px;
+padding: 2px;
+}
+
+.socialmedia-bar{
+margin: 2px;
 }
