--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,25 @@ body {
 	padding: 0;
 	font-family: sans-serif;
 }
+
+.div-textes {
+	position: absolute;
+	font-family: sans-serif;
+	margin-left: 300px;
+	margin: 190px;
+	width: 330px;
+}
+
+.info-header {
+  font-family: 'Satisfy', cursive, sans-serif;
+  color: black;
+  bottom: 0;
+  left: 0;
+  top: 0px;
+  right: 0;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  font-size: 100px;
+  margin: 25px;
+}
