--- a/src/components/aboutme.css
+++ b/src/components/aboutme.css
@@ -3,6 +3,9 @@
 	font-family: 'Satisfy', cursive, sans-serif;
 }
 
+.main-box{
+	/*margin-left: 25px;*/
+}
 .intro-text {
 	text-transform: uppercase;
 	font-size: 45px;
@@ -15,19 +18,24 @@
 }
 
 .about-text{
-	position: absolute;
+	/*position: absolute;*/
 	font-size: 20px;
-	font-family: sans-serif;
 	font-weight: lighter;
-	width: 450px;
+	/*width: 450px;*/
+	max-width: 500px;
 	font-family: 'Satisfy', cursive, sans-serif;
 }
 
+.about-text-sub {
+	width: 70%;
+	float: left;
+}
+
 .profil-img {
-	margin-left: 600px;
-	width: 300px;
-	height: 300px;
-	margin-top: 360px;
+	width: 26%;
+	height: 26%;
+	float: left;
+	margin-left: 10px;
 }
 
 .about-me{
@@ -37,14 +45,11 @@
 	left: 0;
 	top: 0px;
 	right: 0;
-	align-items: center;
-	justify-content: center;
-	position: absolute;
 	font-size: 80px;
 	margin: 25px;
 }
 
-.all-info {
+.XXall-info {
 	bottom: 0;
 	left: 0;
 	top: 0px;
@@ -78,4 +83,52 @@ a .far.fa-envelope{
 
 .fas.fa-mobile-alt{
 	color: tomato;
+}
+
+/* MOBILE-SIZE */
+@media (max-width: 600px) {
+
+		.mini-text{
+		font-size: 16px;
+		}
+
+.about-text{
+	width: 100%;
+margin: 0;
+}
+
+.intro-text{
+	font-size: 20px;
+}
+.div-textes{
+	margin: auto;
+	margin-left: auto;
+	width: auto;
+}
+.profil-img{
+	width: 50%;
+	height: 50%;
+	position: absolute;
+}
+}
+
+/* TABLETS-SIZE */
+@media (min-width: 600px) and (max-width: 900px){
+	.mini-text{
+	font-size: 16px;
+	}
+
+.intro-text{
+font-size: 20px;
+}
+.div-textes{
+margin: auto;
+margin-left: auto;
+width: auto;
+}
+
+.profil-img{
+	width: 150px;
+	height: 150px;
+}
 }
