--- a/src/components/header.css
+++ b/src/components/header.css
@@ -1,3 +1,19 @@
 a {
 	text-decoration:none;
 }
+
+/* MOBILE-SIZE */
+@media (max-width: 600px) {
+
+		header{
+		font-size: 10px;
+		}
+
+}
+
+/* TABLETS-SIZE */
+@media (min-width: 600px) and (max-width: 900px){
+	header{
+	font-size: 15px;
+	}
+}
